--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Rhyno EV Legal Documents</h1>
+            <h1>Privacy Policy</h1>
         </div>
         <div class="nav-menu">
             <a href="privacy-policy.html" class="nav-button">Privacy Policy</a>
