--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -194,7 +194,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Rhyno EV Privacy Policy</h1>
+            <h1>Privacy Policy</h1>
         </div>
         <div class="nav-menu">
             <a href="index.html" class="home-button">Home</a>
