--- a/user-agreement.html
+++ b/user-agreement.html
@@ -194,7 +194,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Rhyno EV User Agreement</h1>
+            <h1>User Agreement</h1>
         </div>
         <div class="nav-menu">
             <a href="index.html" class="home-button">Home</a>
